[package]
name = "simple-server"
version = "0.1.0"
authors = ["circumspect <40770208+circumspect@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "simple_server"
path = "src/lib.rs"

[[bin]]
name = "simple-server-bin"
path = "src/bin/main.rs"

[dependencies]
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.6", features = ["codec"] }
